@@ -139,12 +139,18 @@ class CloudServiceProcess(private val cloudService: ICloudService) : ICloudServi
         val beginAndEnd = if (CloudAPI.instance.isWindows()) "\"" else ""
         val classPathValue = beginAndEnd + classPathValueList.joinToString(separator) + beginAndEnd
 
-        val commands = arrayListOf("java", "-Dcom.mojang.eula.agree=true", "-XX:+UseConcMarkSweepGC", "-XX:+CMSIncrementalMode",
-                "-XX:-UseAdaptiveSizePolicy", "-Djline.terminal=jline.UnsupportedTerminal",
+        val jvmArguments = Wrapper.instance.jvmArgumentsConfig.jvmArguments.filter { it.groups.contains("all") || it.groups.contains(this.cloudService.getGroupName()) }
+        val commands = mutableListOf("java")
+
+        jvmArguments.forEach { commands.addAll(it.arguments) }
+
+        val startArguments = arrayListOf("-Dcom.mojang.eula.agree=true", "-Djline.terminal=jline.UnsupportedTerminal",
                 "-Xms" + cloudService.getMaxMemory() + "M", "-Xmx" + cloudService.getMaxMemory() + "M", "-cp", classPathValue,
                 ManifestLoader.getMainClass(jarFile.absolutePath)!!)
+        commands.addAll(startArguments)
 
-        if (cloudService.getServiceVersion().name.toLowerCase().contains("spigot")) {
+        val lowerCaseName = cloudService.getServiceVersion().name.toLowerCase()
+        if (lowerCaseName.contains("spigot") || lowerCaseName.contains("paper")) {
             commands.add("nogui")
         }
         return commands.toTypedArray()
@@ -152,6 +158,10 @@ class CloudServiceProcess(private val cloudService: ICloudService) : ICloudServi
 
     override fun forceStop() {
         process?.destroyForcibly()
+    }
+
+    override fun getTempDirectory(): File {
+        return serviceTmpDir
     }
 
     override fun isActive(): Boolean = this.process?.isAlive ?: false
